# ds-rag-embedder-v1

./: .gitignore  .pypi_env.example  LICENSE  MODEL_CARD.md  README.md  README_HF_SPACE.md  app.py  pyproject.toml  requirements-space.txt  requirements.txt
.github/workflows/: test.yml
data/: corpus_stats.json
data/benchmarks/: ds_rag_benchmark.jsonl
data/corpus/: ds_ml_corpus.jsonl
data/eval/: ds_retrieval_eval.jsonl
docs/: ADOPTION.md  BENCHMARK.md  EVALUATION.md  HF_UPLOAD.md  KAGGLE.md  LAUNCH_POST.md  RAG_INTEGRATION.md  TRAINING.md
ds_rag_embedder/: __init__.py  cli.py  config.py  evaluate.py  kaggle_env.py  model.py  train.py
ds_rag_embedder/integrations/: langchain.py  llama_index.py
ds_rag_embedder/rag/: __init__.py  chunker.py  hybrid.py  pipeline.py  retriever.py
examples/: README.md  chromadb_example.py  faiss_example.py  hybrid_retrieval_example.py  langchain_example.py  llama_index_example.py
notebooks/: kaggle_ds_rag_embedder.ipynb  kernel-metadata.json
outputs/: benchmark_report.html  benchmark_report.md  eval_results.json
published/: ADOPTION_LINKS.md  HF_PUBLISH.md  training_meta.json
scripts/: benchmark_report.py  build_corpus.py  evaluate.py  export_hf.py  generate_kaggle_notebook.py  install_git_hooks.sh  publish_adoption.sh  publish_dataset.py  publish_hf.sh  publish_hf_community.py  publish_kaggle.sh  publish_pypi.sh  publish_space.sh  run_local.sh  train.py
scripts/git-hooks/: prepare-commit-msg
tests/: test_ds_rag_embedder.py
