[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ds-rag-embedder"
version = "1.0.0"
description = "Domain-specific RAG embedding model for Data Science & ML documentation retrieval"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Digvijay Waghela", email = "digvijay.vaghela@yahoo.com" }]
requires-python = ">=3.10"
keywords = [
  "rag", "embeddings", "retrieval", "data-science", "machine-learning",
  "sentence-transformers", "vector-search", "huggingface",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "sentence-transformers>=3.0",
  "transformers>=4.40",
  "torch>=2.1",
  "accelerate>=1.1.0",
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "huggingface_hub>=0.23",
  "datasets>=2.19",
  "tqdm>=4.66",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
demo = ["gradio>=4.44", "plotly>=5.22"]
dev = ["pytest>=8.0", "ruff>=0.5", "ipykernel>=6.29"]
integrations = ["langchain-community>=0.2", "llama-index-core>=0.11", "chromadb>=0.5", "faiss-cpu>=1.8"]
all = ["ds-rag-embedder[demo,dev,integrations]"]

[project.scripts]
ds-rag-embed = "ds_rag_embedder.cli:main"

[project.urls]
Homepage = "https://huggingface.co/waghelad/ds-rag-embedder-v1"
Repository = "https://github.com/dgvj-work/ds-rag-embedder-v1"
Documentation = "https://huggingface.co/waghelad/ds-rag-embedder-v1"

[tool.setuptools.packages.find]
where = ["."]
include = ["ds_rag_embedder*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"
